# prove-python

./: pyproject.toml
.github/workflows/: ci.yml
src/github/workflows/: ci.yml
src/text_tools/: cli.py  domain.py  service.py
tests/: test_domain.py
